--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "universal-cookie": "^7.2.0",
     "web-vitals": "^2.1.4"
